# my-runpod-container

./: .lefthook.yml  .versions.env  Dockerfile  Makefile  README.md  RUNPOD.md  bake.sh  cloudbuild.yaml  docker-bake.hcl  justfile  package.json  pnpm-lock.yaml  pyproject.toml  run_shell_tests.sh  setup_multi_architecture_build.sh
.github/workflows/: base.yml  build-and-push.yml  build-through-google-cloud-build.yaml  dev-to-main-auto-merge.yml  dev-to-main-direct-merge.yml  docker-build.yaml  pr-auto-merge.yml  rocm.yml  shell-tests.yml
builds/base/: Dockerfile  docker-bake.hcl  nginx.conf  post_start.sh  runpod.txt  services.env
builds/rocm/: docker-bake.hcl
container/scripts/: post_start.sh
container/src/: serve-remote.py  start-vscode
dev-tools/: README.md  check-dev-requirements.sh  simple-version-test.sh  test-version-integration.sh  update-container-versions.py
docs/: README.md  shell-testing.md
docs/guides/: cicd-system.md  dev-requirements.md  development.md  just-usage.md  pr-auto-merge.md  shell-test-improvement-plan.md  tool-management.md
docs/migration/: option1-plan.md  project-restructure.md
lib/: bashunit
official-templates/base/: Dockerfile  README.md  docker-bake.hcl  readme.html  start.sh
official-templates/rocm/: docker-bake.hcl
tests/bats/: command_checks_test.bats  docker_integration_test.bats  file_operations_test.bats  logging_functions_test.bats  platform_detection_test.bats  version_compare_test.bats
tests/helpers/: mock_commands.sh  test_helpers.sh
tests/integration/: docker_integration_test.sh
(+7 files in other folders)
