[project]
name = "personal-runpod-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "lefthook>=1.12.2",
]

# Shell testing is available via direct script execution:
# ./run_shell_tests.sh [options]
#
# Available options:
# --unit-only, --mocked-only, --integration, --verbose
# Or use uv run --script run_shell_tests.sh [options]
